feat: creat CRUD apis for channels
