# swagger.yaml
@@ -3,8 +3,8 @@ tags:
   description: videos API
 
 paths:
-# [GET] videos
   /api/v1/videos:
+    # [GET] videos
     get:
       tags:
       - videos
@@ -15,7 +15,7 @@ paths:
         500:
           description: 'Server Error'
 
-# [POST] videos
+    # [POST] videos
     post:
       tags:
       - videos
@@ -100,6 +100,103 @@ paths:
         500:
           description: 'Server Error'
 
+  /api/v1/channels:
+    # [GET] channels
+    get:
+      tags:
+        - channels
+      summary: Find All Channels
+      responses:
+        200:
+          description: 'OK'
+        500:
+          description: 'Server Error'
+
+    # [POST] channels
+    post:
+      tags:
+        - channels
+      summary: Add Channel
+      parameters:
+        - name: body
+          in: body
+          description: channel Data
+          required: true
+          schema:
+            $ref: '#/definitions/channels'
+      responses:
+        201:
+          description: 'Created'
+        400:
+          description: 'Bad Request'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+  # [GET] channels/id
+  /api/v1/channels/{id}:
+    get:
+      tags:
+        - channels
+      summary: Find Channel By Id
+      parameters:
+        - name: id
+          in: path
+          description: Channel Id
+          required: true
+      responses:
+        200:
+          description: 'OK'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+    # [PUT] channels/id
+    put:
+      tags:
+        - channels
+      summary: Update Channel By Id
+      parameters:
+        - name: id
+          in: path
+          description: channel Id
+          required: true
+        - name: body
+          in: body
+          description: channel Data
+          required: true
+          schema:
+            $ref: '#/definitions/channels'
+      responses:
+        200:
+          description: 'OK'
+        400:
+          description: 'Bad Request'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
+    # [DELETE] channels/id
+    delete:
+      tags:
+        - channels
+      summary: Delete Channel By Id
+      parameters:
+        - name: id
+          in: path
+          description: channel Id
+          required: true
+      responses:
+        200:
+          description: 'OK'
+        409:
+          description: 'Conflict'
+        500:
+          description: 'Server Error'
+
 # definitions
 definitions:
   videos:
@@ -123,6 +220,27 @@ definitions:
       size:
         type: number
         description: video size
+      ownerId:
+        type: string
+        description: video owner id
+
+  channels:
+    type: object
+    required:
+      - title
+      - bannerUrl
+      - isPublic
+      - ownerId
+    properties:
+      title:
+        type: string
+        description: channel title
+      bannerUrl:
+        type: string
+        description: banner url
+      isPublic:
+        type: boolean
+        description: public access
       ownerId:
         type: string
         description: video owner id
